--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/express-session": "^1.17.5",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^1.4.12",
     "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.17",
     "ts-node": "^10.9.1",
@@ -26,6 +27,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.1",
+    "cloudinary": "^2.6.0",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
@@ -34,6 +36,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.13.0",
     "mongoose": "^8.9.5",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "nodemon": "^2.0.20"
   }
