--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
     "i18next": "^24.1.2",
+    "i18next-browser-languagedetector": "^8.0.4",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
