--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
+    "react18-json-view": "^0.2.9",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
